--- a/views/perfil/perfil.ejs
+++ b/views/perfil/perfil.ejs
@@ -413,7 +413,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/dashboard/cliente">
-                            <i class="fas fa-tachometer-alt me-2"></i>Dashboard
+                            <i class="fas fa-tachometer-alt me-2"></i>Inicio<
                         </a>
                     </li>
                     <li class="nav-item">
@@ -463,7 +463,7 @@
             <h1 class="page-title">Mi Perfil</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/dashboard/cliente">Dashboard</a></li>
+                    <li class="breadcrumb-item"><a href="/dashboard/cliente">Inicio</a></li>
                     <li class="breadcrumb-item active">Mi Perfil</li>
                 </ol>
             </nav>
